# DevDocsDownloader

./: .gitignore  AGENTS.MD  DevDocsDownloader.Desktop.sln  DevDocsDownloader.py  README.md  analyze_doc_paths.py  build_skip_manifest.py  documentation_downloader.py  paused.gitignore  pyproject.toml  requirements.txt  session_log.md  setup.py  top_50_programming_languages_with_official_docs.txt  version.json
.ai-context/lessons-learned/: 2026-04-21-bootstrap-helpers-must-track-runtime-layout.md  2026-04-21-pytest-must-be-in-requirements.md  2026-04-21-resume-needs-explicit-extraction-lifecycle.md  2026-04-21-script-moves-need-runtime-path-shims.md  2026-04-21-state-migration-and-bounded-runs.md  2026-04-24-bulk-concurrency-settings-must-be-wired-end-to-end.md  2026-04-24-cross-platform-output-paths-must-target-windows-safe-names.md  2026-04-24-source-caches-and-ready-markers-need-structural-validation.md  _TEMPLATE_LESSONS.md
.ai-context/main-documentation/: TODO.md  project_architecture.md  project_state.md
.ai-context/other-documentation/: 2026-04-21-chat-history.jsonl  README.md
.ai-context/project-context/: 2026-04-21-015104-pipeline-live-validation-hardening.md  2026-04-21-015559-package-and-bootstrap-audit.md  2026-04-21-020233-move-root-scripts-into-scripts-folder.md  2026-04-21-143052-create-ai-context-system.md  2026-04-21-151500-ai-context-system-hardening.md  2026-04-21-152500-separate-bootstrap-from-agent.md  2026-04-21-160000-fix-main-documentation-layout.md  2026-04-21-171500-align-root-launcher-and-source-documents.md  2026-04-21-172200-make-other-documentation-optional.md  2026-04-21-180000-remote-cleanup-and-pytest-fix.md  2026-04-21-190500-audit-remediation-batch-1.md  2026-04-23-120000-add-root-requirements-canonical-file.md  2026-04-24-160000-fix-bulk-source-cache-and-layout-failures.md  2026-04-24-170500-make-output-paths-windows-safe.md  2026-04-24-171500-expose-bulk-language-concurrency.md  _TEMPLATE_CONTEXT.md
.claude/: AGENTS.MD  settings.local.json
.github/: release-notes.md
.github/workflows/: ci.yml  live-drift.yml  release.yml
benchmarks/corpora/: core_docs_v1.json
desktop/DevDocsDownloader.Desktop/: App.xaml  App.xaml.cs  DevDocsDownloader.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
doc_ingest/: __init__.py  adapters.py  adaptive.py  cache.py  cli.py  compiler.py  config.py  conversion.py  desktop_backend.py  desktop_settings.py  discovery.py  embedder.py  errors.py  indexer.py  live_probe.py  models.py  output_intelligence.py  parser.py  pipeline.py  progress.py  runtime.py  services.py  state.py  validator.py  version.py
documentation/: architecture.md  codemap.md  development_progress.md  full-project-documentation.md  implementation_state_1_4_0.md  output_contract.md  release_checklist.md  roadmap.md
scripts/: analyze_doc_paths.py  benchmark_pipeline.py  build_desktop_backend.py  build_skip_manifest.py  check_release_hygiene.py  check_version.py  generate_icon.py  minimal_smoke.py  run_desktop_backend.py  setup.py
source-documents/: README.md  doc_path_overrides.json  renamed-link-source.md  requirements.txt
tests/: helpers.py  test_adaptive_unit.py  test_backend_job_lifecycle.py  test_cache_unit.py  test_cli_contract.py  test_compiler_and_validator.py  test_conversion_unit.py  test_desktop_backend.py  test_dynamic_source_discovery.py  test_extraction_and_normalization.py  test_live_endpoints.py  test_live_extraction_sanity.py  test_live_probe_dash_acceptance.py  test_optional_dependencies_and_adapters.py  test_output_contract.py  test_output_intelligence.py  test_phase10_source_fidelity.py  test_phase11_scalability_release.py  test_phase4_architecture.py  test_phase5_performance.py  test_phase6_conversion_quality.py  test_phase7_output_consumption.py  test_phase8_validation_observability.py  test_phase9_gui.py  test_pipeline_integration.py  test_pipeline_resume.py  test_registry_resolution.py  test_search_performance.py  test_service_artifacts.py  test_setup_bootstrap.py  test_setup_script.py  test_source_adapters_mocked.py  test_source_resilience.py  test_urls_and_discovery.py  test_version.py
(+71 files in other folders)
