[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devdocsdownloader"
version = "0.1.0"
description = "Documentation ingestion and markdown compilation pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "docling>=2.0",
  "httpx>=0.27,<1",
  "lxml>=5,<6",
  "markdownify>=0.13,<1",
  "orjson>=3.10,<4",
  "playwright>=1.53,<2",
  "psutil>=5.9,<8",
  "pydantic>=2.8,<3",
  "tenacity>=9,<10",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
