[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devdocsdownloader"
version = "0.1.0"
description = "Documentation ingestion and markdown compilation pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "lxml>=5,<7",
  "markdownify>=0.13,<1",
  "orjson>=3.10,<4",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
]
analysis = []
conversion-extended = [
  "docling>=2.0",
  "mammoth>=1.9,<2",
  "pypdf>=5,<7",
]
browser = [
  "playwright>=1.53,<2",
]
benchmark = [
  "psutil>=5.9,<8",
]
gui = [
  "nicegui>=2,<3",
]

[tool.setuptools]
py-modules = ["DevDocsDownloader"]

[tool.setuptools.packages.find]
include = ["doc_ingest*"]
exclude = ["cache*", "logs*", "output*", "state*", "tmp*", "tests*", "scripts*", "documentation*"]

[tool.setuptools.package-data]
"doc_ingest.sources" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: opt-in live upstream endpoint probes; requires DEVDOCS_LIVE_TESTS=1",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  "output",
  "cache",
  "logs",
  "state",
  "tmp",
  "source-documents",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["doc_ingest"]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
no_strict_optional = false
